[package]
name = "tinymap"
version = "0.3.0"
authors = ["not_a_seagull <jtnunley01@gmail.com>"]
edition = "2018"
description = "A map structure that stores its data on the stack"
license = "MIT OR Apache-2.0"
repository = "https://github.com/not-a-seagull/tinymap"
homepage = "https://github.com/not-a-seagull/tinymap#readme"

[dependencies]
hashbrown = { version = "0.8.2", optional = true }
tinyvec = { version = "1.0.0", features = ["nightly_const_generics"] }

[features]
default = []
alloc = ["hashbrown"]
