[package]
name = "tinymap"
version = "0.4.0"
authors = [
    "notgull <jtnunley01@gmail.com>",
    "robjtede <robjtede@icloud.com>",
]
edition = "2018"
description = "A map structure that stores its data on the stack"
license = "MIT OR Apache-2.0"
repository = "https://github.com/robjtede/tinymap"
rust-version = "1.60"

[dependencies]
hashbrown = { version = "0.13", optional = true }
tinyvec = { version = "1.4", features = ["rustc_1_55"] }

[features]
default = []
alloc = ["hashbrown"]
